welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:10: error: ';' expected but ',' found.
  fairec(Color.Red) ; avance() , fairec(Color.Blue) ; avance() : fairec(Color.green) ; avance() ; fairec(Color.Yellow)
                               ^PatternPicture:10: error: ';' expected but '(' found.
  fairec(Color.Red) ; avance() , fairec(Color.Blue) ; avance() : fairec(Color.green) ; avance() ; fairec(Color.Yellow)
                                                                       ^